## 2016-11-01
• Removed form-control margin top 8px on app.css due to conflict
• Removed tab-pane class to avoid conflicts

## 2016-10-31
• Updated edit-profile.html
• Updated app.css to fix navigation from disappearing on smaller screens
• Added nav role for validation
• Added control-label class to app.css

## 2016-10-28
• Added button on company-info.html for admin action
• Updated app.css to remove padding-right on nav tabs
• Removed browser compatibility on footer when logged in
• Updated column for auto-claim.html

## 2016-10-27
• Added company-info.html and css for company info page
• Added edit-profile.html and css for edit profile page
• Updated app.css by adding global styles
• Linked left navigation to appropriate pages

## 2016-10-26
• Added progress-bar-empty class to dashboard.css to display empty bg with no claims
• Updated footer to add browser compatibility
• Added spacer class to search-claims.css to add space between input fields
• Working on claim-details.html and css not yet completed

## 2016-10-25
• Updated copyright in app.css

## 2016-10-24
• App.css updated
• Breadcrumb added to search-claims.html
• My team link removed from left navigation
• Left navigation snow fixed instead of absolute
• Claims add new sub category when selected
• Lower res claims add new fixed
• Added admin search claim section, currently commented out