@@ -1,0 +1,235 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Insurance Office of America - CAMS</title>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="css/edit-profile.css">
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+</head>
+
+<body class="cams-pad cams-page">
+	<nav class="navbar navbar-inverse navbar-fixed-top menu-top">
+		<div class="container-fluid menu-margin">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".sidebar1" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="index.html"><img src="img/logo.png" width="150" alt="Company Title">
+				</a>
+				<h4 class="company-title">Insurance Office of America</h4>
+				<h5>Claims Advocate Management System</h5>
+			</div>
+			<div id="navbar" role="navigation" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Resources <span class="fa fa-caret-down" aria-hidden="true"></span></a>
+						<ul class="dropdown-menu">
+							<div class="arrow-up"></div>
+							<li><a href="#">Custom Claims Kit</a>
+							</li>
+							<li><a href="#">IOA RiskScore</a>
+							</li>
+							<li><a href="#">Learning Management System</a>
+							</li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Amy Wacker <i class="fa fa-cog" aria-hidden="true"></i></a>
+						<ul class="dropdown-menu">
+							<div class="arrow-up"></div>
+							<li><a href="#">Edit Profile</a>
+							</li>
+							<li><a href="#">Help</a>
+							</li>
+							<li><a href="#">Logout</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="container-fluid content">
+		<div class="row sidebar-container">
+			<div id="sidebar" class="col-xs-12 col-sm-3 col-md-12 sidebar1 sidebar navbar-collapse collapse">
+				<ul class="nav nav-sidebar">
+					<li>
+						<a href="dashboard.html">
+							<i class="fa fa-tachometer fa-2x" aria-hidden="true"></i><span>Dashboard</span>
+						</a>
+						<hr />
+					</li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-clipboard fa-2x" aria-hidden="true"></i><span> Claims</span><i class="fa fa-plus fa-2x location" aria-hidden="true"></i><i class="fa fa-minus fa-2x location" aria-hidden="true"></i></a>
+						<ul class="dropdown-menu">
+							<li><a href="claim-add-new.html">Add New</a>
+								<hr>
+							</li>
+							<li><a href="search-claims.html">View Claims</a>
+								<hr>
+							</li>
+							<li><a href="tasks.html">Tasks</a>
+								<hr>
+							</li>
+						</ul>
+						<hr />
+					</li>
+					<li>
+						<a href="#"><i class="fa fa-building fa-2x" aria-hidden="true"></i><span> Company Info</span></a>
+						<hr>
+					</li>
+				</ul>
+				<div class="info">
+					<p>Producer(s):</p>
+					<ul>
+						<li><i class="fa fa-user" aria-hidden="true"></i> Bruce Eades</li>
+						<li><i class="fa fa-phone" aria-hidden="true"></i> (678) 923-3336</li>
+						<li><i class="fa fa-envelope" aria-hidden="true"></i> bruce.eades@ioausa.com</li>
+					</ul>
+					<br />
+					<p>Claims Contact(s):</p>
+					<ul>
+						<li><i class="fa fa-user" aria-hidden="true"></i> Fred Tucker</li>
+						<li><i class="fa fa-phone" aria-hidden="true"></i> (407) 998-5488</li>
+						<li><i class="fa fa-envelope" aria-hidden="true"></i> fred.tucker@ioausa.com</li>
+					</ul>
+					<br />
+				</div>
+				<ul class="nav nav-sidebar nav-sidebar2">
+					<li class="dropdown">
+						<hr>
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-cog fa-3x" aria-hidden="true"></i><span> Amy Wacker</span>
+                     <i class="fa fa-plus fa-2x location" aria-hidden="true"></i><i class="fa fa-minus fa-2x location" aria-hidden="true"></i></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Edit Profile</a>
+							</li>
+							<li><a href="#">Help</a>
+							</li>
+							<li><a href="#">Logout</a>
+							</li>
+						</ul>
+						<hr>
+					</li>
+				</ul>
+			</div>
+			<!-- Body -->
+			<div class="body-container">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 title-header">
+					<div class="pull-left head-drop">
+						<div class="btn-group">
+							<p>Edit Profile</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<div class="panel panel-primary">
+
+						<div class="panel-body">
+
+							<h3 class="claim-header">General Information</h3>
+							<hr />
+
+
+							<form class="form" role="form">
+								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Application Access:</label>
+										<div class="checkbox">
+											<label for="">
+												<input name="" id="" value="CAMS" type="checkbox"> CAMS
+											</label>
+										</div>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">FEIN:</label>
+										<div class="form-control-static">650393822</div>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">SIC:</label>
+										<div class="form-control-static">5511</div>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">NAICS:</label>
+										<div class="form-control-static"></div>
+									</div>
+
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Lines of Coverage:</label>
+										<div class="form-control-static"></div>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Servicing Branch:</label>
+										<div class="form-control-static">Insurance Office of America</div>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="search-input">Parent Company:</label>
+										<input id="search-input" name="search-input" placeholder="Search" class="form-control input-md" type="search">
+									</div>
+
+								</div>
+
+								<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Year Established:</label>
+										<input id="" name="" class="form-control input-md" required="" type="text">
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Year Became IOA Client:</label>
+										<input id="" name="" class="form-control input-md" required="" type="text">
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Special Handling:</label>
+										<textarea class="form-control" id="" cols="20" rows="3" name=""> </textarea>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="">Comments:</label>
+										<textarea class="form-control" id="" cols="20" rows="3" name=""> </textarea>
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for=""> LMS Client Profile:</label>
+										<input id="search-input" name="" class="form-control input-md" type="search">
+									</div>
+
+									<div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
+										<label class="control-label" for="search-input">Claims Portal Client Profile:</label>
+										<input id="" name="" class="form-control input-md" type="search">
+									</div>
+
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+		</div>
+	</div>
+	<div class="text-center copyright">
+		<p>Copyright &#169; 2016 Insurance Office of America. All rights reserved. Version 2.3.3</p>
+	</div>
+	<script type="text/javascript" src="js/tooltip.js"></script>
+</body>
+
+</html>
