@@ -1,3 +1,6 @@
+## 2016-11-02
+• Added general-info.html as a sample for two column layout with forms
+
 ## 2016-11-01
 • Removed form-control margin top 8px on app.css due to conflict
 • Removed tab-pane class to avoid conflicts
